# irc-chat

./: .gitignore  CMakeLists.txt  README.md
include/: bot.h  channel.h  client.h  command.h  commandhandler.h  commands.h  server.h
src/: client.cpp  main.cpp  server.cpp
